<resources>
    <string name="app_name">Stock</string>

    <string name="deal_num">交易次数:</string>
    <string name="win_rate">胜率:</string>
    <string name="max_loss">最大亏损:</string>
    <string name="comprehensive_rate">综合盈率:</string>
    <string name="join_time">加入时间:</string>
    <string name="buy_time">购买时间:</string>

    <string name="superior_rank">高手排行</string>
    <string name="buy_detail">购买详情</string>
    <string name="person_center">个人中心</string>
    <string name="wallet">钱包</string>
    <string name="integral">积分</string>
    <string name="my_documentary">我的跟单</string>
    <string name="my_taxation">我的报单</string>
    <string name="recommended_prize">推荐有奖</string>
    <string name="integral_mall">积分商城</string>
    <string name="service_center">服务中心</string>

    <string name="refresh">下拉刷新...</string>
    <string name="load_more">上拉加载...</string>
    
    <string name="taxation">报单</string>
    <string name="futures">期货</string>
    <string name="stock_code">股票代码</string>
    <string name="stock_name">股票名称</string>
    <string name="futures_name">期货名称</string>
    <string name="search">查询</string>
    <string name="price">价格</string>
    <string name="shipping_space">仓位</string>
    <string name="sure">确定</string>
    <string name="taxation_price_hint">提示：当价格到达指定价位，此次报单才生效，否则无效。</string>
    <string name="name">名称</string>
    <string name="max_new">最新</string>
    <string name="ups_and_downs">涨跌</string>
    <string name="today_ing">日增仓</string>
    <string name="direction">方向</string>
    
    <string name="hot">热度</string>
    <string name="fans">粉丝</string>
    <string name="follow">+关注</string>
    <string name="warm_hint">温馨提示：所有直播内容仅代表播主个人观点，不构成任何投资建议。</string>
    <string name="shape">分享</string>
    <string name="inquire">提问</string>
    <string name="inquire_hint">输入股票简称/代码+问题</string>
    <string name="not_inquire_with_you">您还没有提问，赶紧问一个～</string>
    <string name="today_all_inquire">今日所有问答</string>
    <string name="answer_hint">解答仅供参考，不作为投资建议</string>
</resources>
