<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal"
              android:gravity="center_vertical"
              android:padding="5dp">

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/riv_icon"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_marginRight="5dp"
        android:adjustViewBounds="true"
        android:src="@mipmap/xiaohei"
        app:riv_oval="false"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="嘟嘟"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_deal_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deal_num"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_win_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/win_rate"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_max_loss"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/max_loss"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_comprehensive_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comprehensive_rate"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/tv_join_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/join_time"
            android:textColor="@color/black"
            android:textSize="12sp"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="5dp"
            android:background="@color/line_color"/>
    </LinearLayout>
</LinearLayout>