<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:background="@color/blue">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/riv_icon"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="20dp"
                    android:src="@mipmap/xiaohei"
                    app:riv_oval="true"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="5dp"
                    android:layout_toRightOf="@id/riv_icon"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="嘟嘟"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>

                    <TextView
                        android:id="@+id/tv_phone"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:drawableLeft="@mipmap/ic_phone"
                        android:drawablePadding="3dp"
                        android:gravity="bottom"
                        android:text="15352264132"
                        android:textColor="@color/white"
                        android:textSize="14sp"/>
                </LinearLayout>
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_wallet"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="100.00"
                        android:textColor="@color/tff7800"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_wallet"
                        android:layout_centerHorizontal="true"
                        android:text="@string/wallet"
                        android:textColor="@color/t313131"
                        android:textSize="13sp"/>
                </RelativeLayout>

                <View
                    android:layout_width="0.5dp"
                    android:layout_height="match_parent"
                    android:background="@color/line_color"/>

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:padding="5dp">

                    <TextView
                        android:id="@+id/tv_integral"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="6220"
                        android:textColor="@color/tff7800"
                        android:textSize="18sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_integral"
                        android:layout_centerHorizontal="true"
                        android:text="@string/integral"
                        android:textColor="@color/t313131"
                        android:textSize="13sp"/>
                </RelativeLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="8dp"
                android:background="@color/line_color"/>

            <com.allen.library.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:sLeftIconRes="@mipmap/ic_my_documentary"
                app:sLeftTextString="@string/my_documentary"/>

            <com.allen.library.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:sLeftIconRes="@mipmap/ic_my_taxation"
                app:sLeftTextString="@string/my_taxation"/>

            <com.allen.library.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:sLeftIconRes="@mipmap/ic_prize"
                app:sLeftTextString="@string/recommended_prize"/>

            <com.allen.library.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:sLeftIconRes="@mipmap/ic_integral_mall"
                app:sLeftTextString="@string/integral_mall"/>

            <com.allen.library.SuperTextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:sLeftIconRes="@mipmap/ic_service"
                app:sLeftTextString="@string/service_center"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>