<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
                                            android:layout_width="match_parent"
                                            android:layout_height="match_parent"
                                            android:background="@color/grey"
                                            android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name"
                android:textColor="@color/gary"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/max_new"
                android:textColor="@color/gary"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:drawableRight="@mipmap/ic_arrow"
                android:gravity="right"
                android:text="@string/ups_and_downs"
                android:textColor="@color/gary"
                android:textSize="12sp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="3dp"
                android:drawableRight="@mipmap/ic_arrow"
                android:gravity="right"
                android:text="@string/today_ing"
                android:layout_marginRight="5dp"
                android:textColor="@color/gary"
                android:textSize="12sp"/>
        </LinearLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_futures"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:background="@color/white"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/ic_search"
                    android:drawablePadding="8dp"
                    android:text="@string/futures_name"
                    android:textColor="@color/t313131"
                    android:textSize="13sp"/>

                <EditText
                    android:id="@+id/et_futures_name"
                    style="?android:attr/textViewStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="right"
                    android:hint="请输入要查询的期货名称"
                    android:inputType="text"
                    android:textColor="@color/black"
                    android:textSize="13sp"/>
            </LinearLayout>


            <TextView
                android:id="@+id/tv_futures_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/taxation_line_grey_shape"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/search"
                android:textColor="@color/grey"
                android:textSize="13sp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@mipmap/ic_price"
                    android:drawablePadding="8dp"
                    android:text="@string/price"
                    android:textColor="@color/t313131"
                    android:textSize="13sp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true">

                    <ImageButton
                        android:id="@+id/ib_subtract"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_to_grey_selected"
                        android:src="@mipmap/ic_subtract"/>

                    <EditText
                        android:id="@+id/et_price"
                        android:layout_width="50dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@null"
                        android:gravity="center"
                        android:inputType="number"
                        android:maxLines="1"
                        android:text="1.00"
                        android:textColor="@color/red"
                        android:textSize="13sp"/>

                    <ImageButton
                        android:id="@+id/ib_add"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_to_grey_selected"
                        android:src="@mipmap/ic_add"/>
                </LinearLayout>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/line_color"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="8dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:paddingTop="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:drawableLeft="@mipmap/ic_direction"
                    android:drawablePadding="8dp"
                    android:text="@string/direction"
                    android:textColor="@color/t313131"
                    android:textSize="13sp"/>

                <RadioGroup
                    android:id="@+id/rg_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="20dp"
                        android:background="@drawable/taxatio_space_selected"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="8dp"
                        android:text="做多"
                        android:textColor="@color/black_to_red"
                        android:textSize="13sp"/>

                    <RadioButton
                        android:id="@+id/rb_empty"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/taxatio_space_selected"
                        android:button="@null"
                        android:gravity="center"
                        android:paddingBottom="8dp"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:paddingTop="8dp"
                        android:text="做空"
                        android:textColor="@color/black_to_red"
                        android:textSize="13sp"/>
                </RadioGroup>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:background="@color/line_color"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:drawableLeft="@mipmap/ic_space"
                android:drawablePadding="8dp"
                android:text="@string/shipping_space"
                android:textColor="@color/t313131"
                android:textSize="13sp"/>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="40dp"
                android:paddingRight="15dp">

                <CheckBox
                    android:id="@+id/cb_one_tenth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/taxatio_space_selected"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="1/10"
                    android:textColor="@color/black_to_red"
                    android:textSize="13sp"/>

                <CheckBox
                    android:id="@+id/cb_one_fifth"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/taxatio_space_selected"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="1/5"
                    android:textColor="@color/black_to_red"
                    android:textSize="13sp"/>

                <CheckBox
                    android:id="@+id/cb_one_four"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/taxatio_space_selected"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="1/4"
                    android:textColor="@color/black_to_red"
                    android:textSize="13sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:paddingLeft="40dp"
                android:paddingRight="15dp">

                <CheckBox
                    android:id="@+id/cb_one_third"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/taxatio_space_selected"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="1/3"
                    android:textColor="@color/black_to_red"
                    android:textSize="13sp"/>

                <CheckBox
                    android:id="@+id/cb_one_half"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:layout_weight="1"
                    android:background="@drawable/taxatio_space_selected"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="1/2"
                    android:textColor="@color/black_to_red"
                    android:textSize="13sp"/>

                <CheckBox
                    android:id="@+id/cb_hundred_percentage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/taxatio_space_selected"
                    android:button="@null"
                    android:gravity="center"
                    android:paddingBottom="12dp"
                    android:paddingTop="12dp"
                    android:text="100%"
                    android:textColor="@color/black_to_red"
                    android:textSize="13sp"/>
            </LinearLayout>

            <TextView
                android:id="@+id/tv_sure"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginRight="60dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/taxation_grey"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/sure"
                android:textColor="@color/white"
                android:textSize="13sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10dp"
                android:paddingBottom="10dp"
                android:background="@color/grey"
                android:gravity="center|top"
                android:paddingTop="10dp"
                android:text="@string/taxation_price_hint"
                android:textColor="@color/gary"
                android:textSize="11sp"/>
        </LinearLayout>
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>